--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "blocks": {
       "app": {
         "files": [
+          "./config.coffee",
           "./controllers/kiteHelper.coffee",
           "./controllers/installer.coffee",
           "./views/index.coffee",
