added mandrill integration

--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,7 @@
     ],
     "less": [
       "./resources/mixins.less",
+      "./resources/modal.less",
       "./resources/style.less"
     ]
   },
