a better way of selecting a vm

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,7 @@
     "less": [
       "./less/mixins.less",
       "./less/modal.less",
+      "./less/dropdown.less",
       "./less/style.less"
     ]
   },
